# software_training

./: CMakeLists.txt  package.xml
include/software_training/: spawn_turtle_nodelet.hpp
src/: spawn_turtle.cpp  spawn_turtle_nodelet.cpp
